--- a/sample/src/main/res/layout/activity_welcome.xml
+++ b/sample/src/main/res/layout/activity_welcome.xml
@@ -23,6 +23,7 @@
         android:theme="@style/DraculaOverlay" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/btn_matisse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
